Additional fix for DOCS-57: Add collapse/expand chapter in single-page HTML
Lower [-]/[+] by height of icon.

--- a/forgerock-doc-maven-plugin/trunk/src/main/resources/coredoc.css
+++ b/forgerock-doc-maven-plugin/trunk/src/main/resources/coredoc.css
@@ -230,6 +230,7 @@ div.synopsis {
     position: relative;
     left: -24px;
     float: left;
+    margin-bottom: -10px;
 }
 
 .nodisplay {
