--- a/forgerock-doc-maven-plugin/trunk/src/main/resources/dfo.css
+++ b/forgerock-doc-maven-plugin/trunk/src/main/resources/dfo.css
@@ -247,6 +247,7 @@ div.synopsis {
     position: relative;
     left: -24px;
     float: left;
+    margin-bottom: -10px;
 }
 
 .nodisplay {
